@@ -1,3 +1,7 @@
+2006-03-20  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_setPrinterShared): Handle classes.
+
 2006-03-17  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsmodule.c (initcups): Added IPP_MAX_NAME.
